err/mugalyser.err
Listing '.'...
Listing './bin'...
Compiling './bin/makeapikeyfile_main.py'...
Compiling './bin/meetup_info_main.py'...
***   File "./bin/meetup_info_main.py", line 94
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './bin/mug_analytics_main.py'...
Compiling './bin/mug_db_setup.py'...
Compiling './bin/mugalyser_main.py'...
***   File "./bin/mugalyser_main.py", line 206
    except pymongo.errors.ServerSelectionTimeoutError, e :
                                                     ^
SyntaxError: invalid syntax

Compiling './bin/muginfo_main.py'...
***   File "./bin/muginfo_main.py", line 205
    except pymongo.errors.ServerSelectionTimeoutError, e :
                                                     ^
SyntaxError: invalid syntax

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/MUGAlyser-1.0.6a0.egg-info'...
Listing './lib/python3.5/site-packages/bson'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/gridfs'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/mongodb_utils'...
Listing './lib/python3.5/site-packages/mongodb_utils-0.9.2.egg-info'...
Listing './lib/python3.5/site-packages/mugalyser'...
Compiling './lib/python3.5/site-packages/mugalyser/comparedata.py'...
***   File "./lib/python3.5/site-packages/mugalyser/comparedata.py", line 17
    except ImportError,e :
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mugalyser/dotted_dict.py'...
***   File "./lib/python3.5/site-packages/mugalyser/dotted_dict.py", line 64
    print 'update', args, kwargs
                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/mugalyser/meetup_api.py'...
***   File "./lib/python3.5/site-packages/mugalyser/meetup_api.py", line 78
    except requests.HTTPError, e :
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mugalyser/meetup_writer.py'...
***   File "./lib/python3.5/site-packages/mugalyser/meetup_writer.py", line 140
    except HTTPError, e :
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/nose'...
Listing './lib/python3.5/site-packages/nose/ext'...
Listing './lib/python3.5/site-packages/nose/plugins'...
Listing './lib/python3.5/site-packages/nose/sphinx'...
Listing './lib/python3.5/site-packages/nose/tools'...
Listing './lib/python3.5/site-packages/nose-1.3.7.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pymongo'...
Listing './lib/python3.5/site-packages/pymongo-3.6.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/utils'...
Listing './lib/python3.5/site-packages/webgui'...
Listing './man'...
Listing './man/man1'...
Listing './share'...
Listing './share/python-wheels'...
